Created basics for Palicode game

--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "uri-js": "^4.4.1"
   }
 }
